# temporal-heterophily-aware-graph-neural-network-for-fraud-detection

./: ..gitignore.swp  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 0_check_data.ipynb  check_exp_id.ipynb
src/: 00_graph_stats.ipynb  01_eda.ipynb  01_feature_dist.ipynb  02_nb_cutoff_selection.ipynb  02_nb_test_eval.py  02_nb_tuning.py  03_svm_calibrated_baseline_model_tuning.py  03_svm_calibrated_cutoff_selection.ipynb  03_svm_calibrated_test_eval.py  03_svm_calibrated_tuning.py  04_xgboost_baseline_model_tuning.py  04_xgboost_cutoff_selection.ipynb  04_xgboost_test_eval.py  04_xgboost_tuning.py  05_fagcn_cutoff_selection.ipynb  05_gat_cutoff_selection.ipynb  05_gatv2_cutoff_selection.ipynb  05_sage_cutoff_selection.ipynb  05_static_graph.py  05_static_graph_tuning.py  06_tgat_cutoff_selection.ipynb  06_tgat_tuning.py  06_tgat_tuning_with_sampler.py  06_tgat_with_sampler_cutoff_selection.ipynb  07_thegcn_cutoff_selection.ipynb  07_thegcn_tuning.py  07_thegcn_tuning_with_sampler.py  07_thegcn_with_sampler_cutoff_selection.ipynb  08_feature_importance_analysis.ipynb  baseline_graph.py  baseline_static_graph.py  dgraphfin.py  feature_importance_analysis.ipynb  graph_process.py  ml_data_preprocess.py  models.py  modules.py  namespaces.py  prepare_sampler_data.py  run_nb_experiments.sh  (+26 more)
src/backup/: modules.ipynb  modules.py  tgat_learn_node.py  tgn_learn_edge.py  tgn_learn_node.py
